# sia-helpers

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  entrypoint.sh  go.mod  go.sum  krs.go  login.go  main.go  package.json  server.go
.github/workflows/: build-login-service.yml  build-turnstile-solver.yml  build.yml  static.yml
auth/: login.go
cmd/docker_entrypoint/: main.go
cmd/khs_monitor/: main.go
cmd/krs_monitor/: main.go
cmd/server/: main.go
internal/httpclient/: client.go
internal/server/: server.go
internal/webhook/: common.go  discord.go  whatsapp.go
khs/: khs.go  monitor.go
khs-monitor/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
khs-monitor/src/: main.ts  run.ts  server.ts
khs-monitor/src/lib/: parseKhs.ts
khs-monitor/views/: khs.html
krs/: krs.go  monitor.go
login-service/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/: cron.ts  main.ts  parseKhs.ts  parseTranscript.ts  server.ts
src/lib/: parseKhs.ts
types/: types.go
userscript/: sia.user.js
